iRedMail-0.9.2:
    * Improvements:
        - Improve Fail2ban filter `postfix.iredmail.conf` to prevent DoS
          attack to SMTP service.

    * Fixed issues:
        - catch-all support doesn't work with user+extension@domain.com.
          Thanks stevekez's <iredmail@stevekerrison.com> contribution in
          forum.
        - uwsgi service doesn't work on RHEL/CentOS. A new version of uwsgi
          package was submitted to EPEL repo with higher priority (not
          submitted by iRedMail team), it's not compatible with settings
          configured by iRedMail, this causes uwsgi service cannot be started.
        - Cannot import MySQL database on Jailed FreeBSD.
        - Not install required port 'databases/py-sqlalchemy' on FreeBSD.
        - Fix 'The Logjam Attack' ssl related issue. Reference:
          https://weakdh.org/

iRedMail-0.9.1:
    * Works on new distribution releases:
        - Debian 8, Ubuntu 15.04. Notes:
            o Roundcube and iRedAdmin are now stored under /opt/www.
            o Cluebringer is not installed due to package missing in official
              repo, that means your server doesn't support greylisting and
              throttling.
            o SOGo is not installed due to package missing in upstream (SOGo)
              repo.

        - OpenBSd 5.7. Notes:
            o No official MySQL binary packages, so please use MariaDB instead.

    * Drop support for old distribution releases:
        - Ubuntu 12.04, 14.10. Please use Ubuntu 14.04 LTS or 15.04 instead.

    * Improvements:
        - Log most terminal output of iRedMail installation to file
          'runtime/install.log', used for troubleshooting after installation.
        - Backup scripts are able to delete old backup copies. Default setting
          is keeping backup copies for 90 days.
        - [LDAP] Allow mailing list account to use attributes: gidNumber,
          memberUid.
        - Don't install both Apache and Nginx, just one of them.
