@@ -326,25 +326,27 @@ install_all()
 
             # Copy yum repo file
             ECHO_INFO "Add yum repo for SOGo: ${YUM_REPOS_DIR}/sogo.repo."
-            cp ${SAMPLE_DIR}/sogo/sogo.rhel${DISTRO_VERSION}.repo ${YUM_REPOS_DIR}/sogo.repo
+            cat > ${YUM_REPOS_DIR}/sogo.repo <<EOF
+[SOGo]
+name=Inverse SOGo Repository
+baseurl=http://inverse.ca/downloads/SOGo/RHEL${DISTRO_VERSION}/\$basearch
+enabled=1
+gpgcheck=0
+EOF
 
         elif [ X"${DISTRO}" == X'DEBIAN' -o X"${DISTRO}" == X'UBUNTU' ]; then
-            if [ X"${DISTRO_CODENAME}" == X'wheezy' -o X"${DISTRO_CODENAME}" == X'trusty' ]; then
-                ALL_PKGS="${ALL_PKGS} sogo sogo-activesync"
+            ALL_PKGS="${ALL_PKGS} sogo sogo-activesync"
 
-                [ X"${BACKEND}" == X'OPENLDAP' ] && ALL_PKGS="${ALL_PKGS} sope4.9-gdl1-mysql"
-                [ X"${BACKEND}" == X'MYSQL' ] && ALL_PKGS="${ALL_PKGS} sope4.9-gdl1-mysql"
-                [ X"${BACKEND}" == X'PGSQL' ] && ALL_PKGS="${ALL_PKGS} sope4.9-gdl1-postgresql"
+            [ X"${BACKEND}" == X'OPENLDAP' ] && ALL_PKGS="${ALL_PKGS} sope4.9-gdl1-mysql"
+            [ X"${BACKEND}" == X'MYSQL' ] && ALL_PKGS="${ALL_PKGS} sope4.9-gdl1-mysql"
+            [ X"${BACKEND}" == X'PGSQL' ] && ALL_PKGS="${ALL_PKGS} sope4.9-gdl1-postgresql"
 
-                ECHO_INFO "Add official apt repo for SOGo in /etc/apt/sources.list"
-                if ! grep "http://inverse.ca ${DISTRO_CODENAME}" /etc/apt/sources.list &>/dev/null; then
-                    if [ X"${DISTRO_CODENAME}" == X'wheezy' ]; then
-                        # Debian 7
-                        echo "deb http://inverse.ca/debian ${DISTRO_CODENAME} ${DISTRO_CODENAME}" >> /etc/apt/sources.list
-                    elif [ X"${DISTRO_CODENAME}" == X'trusty' ]; then
-                        # Ubuntu 14.04
-                        echo "deb http://inverse.ca/ubuntu ${DISTRO_CODENAME} ${DISTRO_CODENAME}" >> /etc/apt/sources.list
-                    fi
+            ECHO_INFO "Add official apt repo for SOGo in /etc/apt/sources.list"
+            if ! grep "http://inverse.ca ${DISTRO_CODENAME}" /etc/apt/sources.list &>/dev/null; then
+                if [ X"${DISTRO}" == X'DEBIAN' ]; then
+                    echo "deb http://inverse.ca/debian ${DISTRO_CODENAME} ${DISTRO_CODENAME}" >> /etc/apt/sources.list
+                elif [ X"${DISTRO}" == X'UBUNTU' ]; then
+                    echo "deb http://inverse.ca/ubuntu ${DISTRO_CODENAME} ${DISTRO_CODENAME}" >> /etc/apt/sources.list
                 fi
             fi
 
