@@ -1,5 +1,8 @@
 [uwsgi]
 
+# Run in background and log to file
+daemonize = /var/log/uwsgi/uwsgi.log
+
 # try to autoload appropriate plugin if "unknown" option has been specified
 autoload = true
 
@@ -25,10 +28,10 @@ chmod-socket = 660
 log-date = true
 
 # user identifier of uWSGI processes
-uid = uwsgi
+#uid = uwsgi
 
 # group identifier of uWSGI processes
-gid = uwsgi
+#gid = uwsgi
 
 # multi-app deployment
 emperor = /etc/uwsgi.d
