@@ -1,4 +1,5 @@
 iRedMail-0.9.2:
+    * SOGo now works on Debian 8, RHEL/CentOS 7.
     * Improvements:
         - Improve Fail2ban filter `postfix.iredmail.conf` to prevent DoS
           attack to SMTP service.
